--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 5|Simple Intrest</title>
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <label for="principle">Initial Amount</label>
                 <input type="text" id="principle" onkeypress="return isNumberKey(event)" autocomplete="off" autofocus placeholder="Principle Amount">
                 <label for="time">Time</label>
-                <input type="text" id="time" onkeypress="return isNumberKeytime(event)" autocomplete="off" placeholder="Time">
+                <input type="text" id="time" onkeypress="return isNumberKey(event)" autocomplete="off" placeholder="Time">
                 <label for="rate">Rate of Intrest</label>
                 <input type="text" id="rate" onkeypress="return isNumberKey(event)" autocomplete="off" placeholder="Annual Rate of Inrest">
                 <span style="margin:0px 5px;">Rate in %..!</span>
