--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 5|Simple Intrest</title>
-    
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
     <div class="display">
         <h1>Simple Intrest Calculator!</h1>
         <div class="banner">
-            <form action="#">
+            <form >
                 <label for="principle">Initial Amount</label>
                 <input type="text" id="principle" onkeypress="return isNumberKey(event)" autocomplete="off" autofocus placeholder="Principle Amount">
-                <label for="time">Time</label>
+                <label for="time">Time in Years</label>
                 <input type="text" id="time" onkeypress="return isNumberKey(event)" autocomplete="off" placeholder="Time">
                 <label for="rate">Rate of Intrest</label>
                 <input type="text" id="rate" onkeypress="return isNumberKey(event)" autocomplete="off" placeholder="Annual Rate of Inrest">
@@ -35,4 +35,4 @@
     </div>
 </body>
 </html>
-<script src="script.js"></script>
+
